<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite"
    tools:context=".DetActivity">

    <ImageView
        android:id="@+id/posterImageView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:contentDescription="@string/imagenposterbg"
        android:scaleType="centerCrop"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/peli1" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:contentDescription="@string/imagenposter"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_poster_shadow" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:background="@drawable/ic_detail_shadow"
        app:layout_constraintTop_toTopOf="@+id/posterImageView">

        <androidx.cardview.widget.CardView
            android:id="@+id/posterCardView"
            android:layout_width="160dp"
            android:layout_height="240dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="16dp"
            android:layout_marginTop="120dp"
            card_view:cardCornerRadius="6dp"
            app:cardElevation="0dp">

            <ImageView
                android:id="@+id/vistaImageView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="fitXY"
                app:srcCompat="@drawable/peli1"
                android:contentDescription="@string/todo" />

        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/nameTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="136dp"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:textSize="28sp"
            android:textColor="@color/colorWhite"
            android:layout_toEndOf="@+id/posterCardView"
            android:text="@string/name" />

        <TextView
            android:id="@+id/authorTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/nameTextView"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/author"
            android:textColor="@color/colorTextYellow"
            android:layout_toEndOf="@+id/posterCardView" />

        <TextView
            android:id="@+id/seasonTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/nameTextView"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="20dp"
            android:layout_toEndOf="@+id/authorTextView"
            android:gravity="end"
            android:text="@string/season"
            android:textColor="@color/colorAccent"
            android:textSize="34sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/seasonTextView"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="16dp"
            android:textColor="@color/colorText"
            android:text="@string/season_text" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/btn_delete_movie_adt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:background="@color/colorWhite"
            android:textColor="@color/black"

            android:layout_below="@+id/nameTextView"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="75dp"
            android:layout_toEndOf="@+id/authorTextView"


            android:layout_marginRight="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/seasonTextView"


            android:contentDescription="@string/borrar_peli"
            app:backgroundTint="@color/design_default_color_on_primary"
            app:srcCompat="@android:drawable/ic_menu_delete" />

        <TextView
            android:id="@+id/descriptionTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/posterCardView"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="21dp"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="11dp"
            android:text="@string/description"
            android:textColor="@color/colorWhite"
            android:textSize="16sp" />



    </RelativeLayout>
</androidx.constraintlayout.widget.ConstraintLayout>