<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".AddMovie">

    <RelativeLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:layout_toStartOf="@+id/imageView"
            android:text="@string/title_activity_main"
            android:textColor="@color/colorWhite"
            android:textSize="34sp" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textView"
            android:layout_alignParentStart="true"
            android:layout_marginStart="16dp"
            android:layout_marginTop="4dp"
            android:layout_marginBottom="24dp"
            android:text="@string/subtitle_add_moovie_activity_main"
            android:textColor="@color/colorText"
            android:textSize="24sp" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:contentDescription="@string/todo"
            app:srcCompat="@drawable/ic_menu"
            tools:ignore="VectorDrawableCompat" />
    </RelativeLayout>

    <EditText
        android:id="@+id/txv_add_moovie_name"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:background="@color/design_default_color_surface"
        android:hint="@string/txt_moovie_name"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textStyle="normal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/linearLayout"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/linearLayout"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
        app:layout_constraintVertical_bias="0.05" />

    <EditText
        android:id="@+id/txv_add_moovie_author"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:background="@color/design_default_color_surface"
        android:hint="@string/txt_moovie_author"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textStyle="normal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/txv_add_moovie_name"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txv_add_moovie_name"
        app:layout_constraintVertical_bias="0.036" />

    <EditText
        android:id="@+id/txv_add_UrlImagen"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:background="@color/design_default_color_surface"
        android:hint="@string/txt_movie_url_imagen"
        android:textAlignment="center"
        android:textColor="@color/black"

        android:textStyle="normal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/txv_add_moovie_author"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/txv_add_moovie_author"
        app:layout_constraintTop_toBottomOf="@+id/txv_add_moovie_author"
        app:layout_constraintVertical_bias="0.038" />

    <EditText
        android:id="@+id/txv_add_moovie_description"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:background="@color/design_default_color_surface"
        android:hint="@string/txt_main_description"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textStyle="normal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/txv_add_UrlImagen"
        app:layout_constraintStart_toStartOf="@+id/txv_add_UrlImagen"
        app:layout_constraintTop_toBottomOf="@+id/txv_add_UrlImagen"
        app:layout_constraintVertical_bias="0.054" />


    <Button
        android:id="@+id/btnAddMovie"

        android:layout_width="164dp"
        android:layout_height="53dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"

        android:backgroundTint="#8A98EA"
        android:text="@string/txt_add_moovie_text_button"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textStyle="normal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/txv_add_UrlImagen"
        app:layout_constraintHorizontal_bias="0.972"
        app:layout_constraintStart_toStartOf="@+id/txv_add_UrlImagen"
        app:layout_constraintTop_toBottomOf="@+id/txv_add_UrlImagen"
        app:layout_constraintVertical_bias="0.198" />


</androidx.constraintlayout.widget.ConstraintLayout>